Feat: Additional files

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ wheels/
 # Virtual environments
 .venv
 
+#testing files
+test_images/
+
 # env variables
 .env
 .env.gateway
 app_api.yaml
+serene-craft-464519-j1-963d43d7e20e.json
