--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.115.14",
     "jinja2>=3.1.6",
+    "langchain>=0.3.26",
     "langchain-core>=0.3.67",
     "langchain-google-vertexai>=2.0.27",
     "loguru>=0.7.3",
